# ysan

./: .gitignore  CMakeLists.txt  conanfile.txt  cppship.toml
etc/config/: app.conf  gui.conf
etc/scenario/: fireOnTheCapital.bys
etc/scenario/fireOnTheCapital/: sc_arch.txt  sc_color.xml  sc_config.xml  sc_fraction.txt  sc_map.txt  sc_person.txt  sc_string.xml  sc_word.xml
include/foundation/: config_dict.h  contract.h  debug.h  foundation.h  log_support.h  string_fmt.h
include/kernel/: component_fwd.h  config.h  core.h
include/kernel/aggr_ai/: aggressive_maker.h  aggressiveai.h
include/kernel/arch/: architecture.h  architecture_mgr.h  architecture_type.h
include/kernel/common/: common_util.h  person_filter.h  print_troop.h  randutil.h
include/kernel/config/: characteristic_config.h  dll_support.h
include/kernel/core/: ai_architecture.h  ai_fraction.h  game_obj.h  subsys.h  timeline.h
include/kernel/detail/: characteristic_type.h  condition_common.h  game_obj_common.h  lockable.h  pimpl.h  range_view.h  raw_architecture.h  raw_fraction.h  raw_person.h  semantic_int.h
include/kernel/diplomacy/: diplomacy_mgr.h  fraction_relation.h
include/kernel/effect/: condition.h  condition_def.h  effect.h  effect_mgr.h  effect_target.h  person_effect.h
include/kernel/effect/condition/: defeat_enemy.h  lead_troop.h  leader_condition.h  mayor_condition.h
include/kernel/fraction/: fraction.h  fraction_controller.h  fraction_mgr.h
include/kernel/impl/: arch_impl.h  core_impl.h  fraction_impl.h  person_impl.h
include/kernel/impl/archai/: ai_architecture_aggressive.h  ai_architecture_common.h  ai_architecture_defensive.h  ai_architecture_development.h
include/kernel/impl/serialization/: adapt_architecture.h  adapt_fraction.h  adapt_person.h  parser.h
include/kernel/impl/serialization/parser/: architecture_parser.h  config.h  fraction_parser.h  id_parser.h  map_parser.h  person_parser.h  skipper.h
include/kernel/job/: arch_job.h  diplomacy_job.h  job.h
include/kernel/military/: intruded_arch.h  legion.h  military_mgr.h  military_support.h  strategy.h  troop.h
include/kernel/person/: person.h  person_mgr.h  position.h
include/kernel/report/: report_mgr.h
include/kernel/resource/: location.h  map.h  string_table.h
include/ui/: bygame.h  byscreen.h  byworker.h  config.h  frontend.h
include/ui/form/: aboutform.h  introform.h  selectform.h  splashform.h
include/ui/support/: utility.h
include/ui/view/: basicview.h  mapview.h
lib/foundation/: debug_support.cpp  foundation.cpp  log_support.cpp
lib/kernel/: core.cpp
lib/kernel/aggr_ai/: aggressive_impl.cpp  aggressiveai.cpp
lib/kernel/arch/: architecture_action.cpp  architecture_job.cpp  architecture_mgr.cpp  architecture_military.cpp  architecture_modifier.cpp  architecture_obj.cpp  architecture_property.cpp  architecture_signal.cpp  architecture_slot.cpp
lib/kernel/common/: common_util.cpp  randutil.cpp
lib/kernel/core/: game_obj.cpp  subsys.cpp  timeline.cpp
lib/kernel/diplomacy/: diplomacy_mgr.cpp  hash_fraction_pair.cpp
lib/kernel/effect/: condition.cpp  effect.cpp  effect_mgr.cpp  person_effect.cpp
lib/kernel/effect/condition/: leader_condition.cpp  mayor_condition.cpp
lib/kernel/fraction/: ai_controller.cpp  fraction_action.cpp  fraction_controller.cpp  fraction_job.cpp  fraction_mgr.cpp  fraction_modifier.cpp  fraction_obj.cpp  fraction_property.cpp  fraction_signal.cpp  fraction_slot.cpp
lib/kernel/impl/: arch_impl.cpp  core_impl.cpp  fraction_impl.cpp  person_impl.cpp
lib/kernel/impl/archai/: ai_architecture_aggressive.cpp  ai_architecture_common.cpp  ai_architecture_defensive.cpp  ai_architecture_development.cpp
lib/kernel/impl/serialization/: parser.cpp
lib/kernel/impl/serialization/parser/: architecture_parser.cpp  fraction_parser.cpp  map_parser.cpp  person_parser.cpp  skipper.cpp
lib/kernel/job/: arch_job.cpp  diplomacy_job.cpp  job.cpp
lib/kernel/military/: intruded_arch.cpp  legion.cpp  military_mgr.cpp  military_support.cpp  military_war.cpp  strategy.cpp  troop.cpp
lib/kernel/person/: person_action.cpp  person_combat.cpp  person_mgr.cpp  person_modifier.cpp  person_obj.cpp  person_property.cpp  person_signal.cpp  person_slot.cpp  position.cpp
lib/kernel/report/: report_mgr.cpp
lib/kernel/resource/: map.cpp  string_table.cpp
lib/ui/: Debugger.h  bygame.cpp  byscreen.cpp  byworker.cpp  frontend.cpp
lib/ui/Adaptor/: ArchItemModel.cpp  ArchItemModel.h  FractionItemModel.cpp  FractionItemModel.h  JobItemModel.cpp  JobItemModel.h  PersonItemModel.cpp  PersonItemModel.h  QtAIPlayer.cpp  QtAIPlayer.h  QtPlayer.cpp  QtPlayer.h
lib/ui/Detail/: Filter.cpp  Filter.h  Shim.h  debug_support.cpp
lib/ui/Form/: About_form.cpp  About_form.h  About_form_imp.ui  ByScreen.cpp  ByScreen.h  Intro_form.cpp  Intro_form.h  Intro_form_imp.ui  Select_form.cpp  Select_form.h  Select_form_imp.ui
lib/ui/Main/: Byapp.cpp  Byapp.h  GameLogic.cpp  GameLogic.h  ImageProvider.cpp  ImageProvider.h
lib/ui/ScreenView/: BattleView.cpp  BattleView.h  ByView.cpp  ByView.h  Mapview.cpp  Mapview.h
lib/ui/Widget/: CityInfo.cpp  CityInfo.h  CityInfo_imp.ui  GraphicsCity.cpp  GraphicsCity.h  GraphicsTroop.cpp  GraphicsTroop.h  GraphicsWarCity.cpp  GraphicsWarCity.h  InfoBar.cpp  InfoBar.h  InfoBar_imp.ui  PromoteSelect.cpp  PromoteSelect.h  PromoteSelect_imp.ui  Reporter.cpp  Reporter.h  Reporter_imp.ui  SelectDialog.cpp  SelectDialog.h  SelectDialog_imp.ui  SysMenu.cpp  SysMenu.h  TransportDialog.cpp  TransportDialog.h  TransportDialog_imp.ui  WorkMenu.cpp  WorkMenu.h  YesOrNo.cpp  YesOrNo.h  YesOrNo_imp.ui
lib/ui/form/: aboutform.cpp  aboutformimp.ui  introform.cpp  introformimp.ui  selectform.cpp  selectformimp.ui  splashform.cpp  splashform.ui
lib/ui/impl/: bygameimpl.cpp  bygameimpl.h
src/: main.cpp
